# CMakeCourse

./: .gitignore  CMakeLists.txt  Makefile  ezcmb.ps1  main.cpp  mczb.ps1  myLib.h
app/: CMakeLists.txt  main.cpp
scripts/: build.ps1  prebuild.ps1  run.ps1
src/: CMakeLists.txt  myLib.cpp
src/myLib/: CMakeLists.txt
